--- a/practice/styles/styles.css
+++ b/practice/styles/styles.css
@@ -1,1 +1,28 @@
-<p class='main-para'>BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus Christ because students, faculty, and employees share a commitment to live the gospel.</p>
+body {
+    text-align: center;
+  }
+
+nav {
+  background-color: steelblue;
+  padding: 10px;
+}
+
+a {
+    color: white;
+    margin: 30px;
+  }
+
+  h1 {
+    color: steelblue;
+  }
+  img {
+    width: 800px;
+    border: 4px solid steelblue;
+  }
+  p {
+    padding: 10px;
+  }
+  footer {
+    background-color: steelblue;
+    color: white;
+  }
