--- a/practice/styles/styles.css
+++ b/practice/styles/styles.css
@@ -7,9 +7,14 @@ nav {
   padding: 10px;
 }
 
-a {
+/*a {
     color: white;
     margin: 30px;
+  }*/ 
+  
+  #active {
+    background-color: white;
+    color: steelblue;
   }
 
   h1 {
@@ -19,8 +24,9 @@ a {
     width: 800px;
     border: 4px solid steelblue;
   }
-  p {
-    padding: 10px;
+  .main-para {
+    font-size: 1.5em;
+    line-height: 1.5em;
   }
   footer {
     background-color: steelblue;
