--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -3,24 +3,24 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&family=Roboto:ital,wght@1,100&family=Rock+Salt&display=swap');
-/*https://coolors.co/ffcab1-ecdcb0-c1d7ae-8cc084-968e85*/
+/*https://coolors.co/ffcab1-ecdcb0-c1d7ae-8cc084-a43312*/
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #ffcab1   ;
+  --secondary-color: #8CBF84 ;
+  --accent1-color: #A43312;
+  --accent2-color: #fff;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Rock Salt";
   --paragraph-font: Roboto, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: green;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
+  --headline-color-on-white: #8cc084;  /* headlines on a white background */ 
+  --headline-color-on-color: #fff; /* headlines on a colored background */ 
   --paragraph-color-on-white: yellow; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
+  --paragraph-background-color: #8cc084  ;
   --nav-link-color: #396E94;
   --nav-background-color: #D4AC0D;
   --nav-hover-link-color: white;
