--- a/practice/styles/styles.css
+++ b/practice/styles/styles.css
@@ -1,15 +1,25 @@
-body {
-    text-align: center;
-  }
 
-nav {
+nav , footer {
   background-color: steelblue;
+  color: white;
   padding: 10px;
+  text-align: center;
+  /* background-color: steelblue;
+  padding: 10px; */
+}
+
+a:hover {
+  background-color: white;
+  color: steelblue;
 }
 
 a {
   font-size: 1.5em;
 }
+
+/* * {
+  border: 2px solid blue;
+} */
 
 /*a {
     color: white;
@@ -17,27 +27,35 @@ a {
   }*/ 
 
   
-  #active {
+  /* #active {
     background-color: white;
     color: steelblue;
-  }
+  } */
 
   h1 {
+    text-align: center;
     color: steelblue;
   }
   img {
     width: 80%;
-    border: 4px solid steelblue;
+    display: block;
+    margin: 0 auto;
+    /* width: 80%;
+    border: 4px solid steelblue; */
   }
-
-  p {
+  main p {
+    width: 80%;
+    margin: 50px auto;
+    text-align: center;
+}
+  /* p {
     width: 80%;
 }
   .main-para {
     font-size: 1.5em;
     line-height: 1.5em;
-  }
+  } */
   footer {
-    background-color: steelblue;
-    color: white;
+    font-size: 20px;
+    margin: 20px auto;
   }
